using System;
using System.Collections.Generic;
using System.Text;

namespace ActividadUnidad5II
{
    public interface IEntrevistable
    {
        void RealizarDeclaraciones(string mensaje);
    }
}
