using System;
using System.Collections.Generic;

namespace ActividadUnidad5II
{
    class Program
    {
        static void Main()
        {
            var pantalla = new PantallaRegistro();
            pantalla.IntroducirDatos();
        }
    }

    public class PantallaRegistro
    {
        public void IntroducirDatos()
        {
            

        }
    }
}

